[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Gotu/Gotu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://sprites/backgrounds/Landscape 1.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 0.333, 0.333 )
transform = Transform2D( 0.333, 0, 0, 0.333, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.699
margin_top = -157.336
margin_right = 977.301
margin_bottom = 562.664
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.517
anchor_top = 1.52
anchor_right = 1.517
anchor_bottom = 1.52
margin_left = -223.78
margin_top = -240.0
margin_right = 224.22
margin_bottom = 241.0
custom_constants/separation = 85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Take Me Hoom"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 169.0
margin_right = 448.0
margin_bottom = 328.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
margin_right = 448.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "Nuevo Juego"

[node name="LoadGame" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
visible = false
margin_top = 58.0
margin_right = 448.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 3 )
text = "Load Game"

[node name="Settings" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
margin_top = 58.0
margin_right = 448.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 4 )
text = "Opciones"

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
margin_top = 116.0
margin_right = 448.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 5 )
text = "Cr√©ditos"

[node name="GroupName" type="Label" parent="CanvasLayer"]
margin_left = 809.0
margin_top = 563.0
margin_right = 1017.0
margin_bottom = 594.0
custom_fonts/font = SubResource( 6 )
text = "Traveler Entertainment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="CanvasLayer"]
margin_left = 11.0
margin_top = 565.0
margin_right = 164.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 7 )
text = "v0.1 - Alpha Version"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonContainer/Credits" to="." method="_on_Credits_pressed"]
